--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -2520,7 +2520,7 @@ table.lecWrapTable .lecInfoTable .w-sub .w-subtit {
     height: 39px;
     line-height: 38px;
     background: #f5f5f5;
-    font-size: 16px;
+    font-size: 15px;
     font-weight: 600;
     color: #878787;
     text-align: center;
@@ -4745,12 +4745,13 @@ ul li.profList .willbes-Layer-ProfileBox {
 }
 .aBox {
     display: inline-block;
-    width: 57px;
-    height: 24px;
+    width: 60px;
+    height: 22px;
     font-size: 12px;
     font-weight: 300;
-    line-height: 22px;
-    text-align: center;  
+    line-height: 20px;
+    text-align: center;
+    font-family: "굴림", "Gulim", "돋움", "Dotum", "Helvetica", "Apple SD Gothic Neo", "sans-serif";  
 }
 .waitBox {
     border: 1px solid #adadad;
