고객센터 > 자주하는질문 > 캠퍼스 아이콘 css 명 추가 업로드

--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -4718,6 +4718,9 @@ ul li.profList .willbes-Layer-ProfileBox {
 .campus_605009 {
     background: #af645a;
 }
+.campus_605999 {
+    background: #000;
+}
 
 .willbes-Lec-Selected {
     margin: 10px 0 15px;
