교수진상세페이지 > 디자인, 코딩검수 작업 업로드

--- a/public/css/willbes/basic.css
+++ b/public/css/willbes/basic.css
@@ -474,6 +474,9 @@ strong {
 .mt40 {
   margin-top: 40px !important;
 }
+.mt45 {
+  margin-top: 45px !important;
+}
 .mt50 {
   margin-top: 50px !important;
 }
