--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -4644,15 +4644,18 @@ ul li.profList .willbes-Layer-ProfileBox {
     float: left;
     width: 100%;
     padding: 15px 35px;
-    border: 1px solid #4f4f4f;
-    border-top: none;
+    border-left: 1px solid #4f4f4f;
+    border-right: 1px solid #4f4f4f;
 }
-.AcadtabBox .online dt {
+.AcadtabBox .acadline {
+    border-bottom: none;
+}
+.AcadtabBox .acadline li {
     float: left;
-    width: 33.333333333333%;
     height: 34px;
 }
-.AcadtabBox .online dt a {
+.AcadtabBox .acadline li a {
+    background: #fff;
     display: block;  
     width: 100%;
     height: 100%;  
@@ -4663,9 +4666,40 @@ ul li.profList .willbes-Layer-ProfileBox {
     text-align: center;
     line-height: 32px;
 }
-.AcadtabBox .online dt:first-child a {
+.AcadtabBox .acadline li:first-child a {
     border-left: 1px solid #e4e4e4;
 }
+.AcadtabBox .acadline li a.on {
+    background: #686971;
+    color: #fff;
+}
+.AcadtabBox .acadline.two li {
+    width: 50%;
+}
+.AcadtabBox .acadline.three li {
+    width: 33.333333333333%;
+}
+.AcadListBox .willbes-Lec {
+    border-top: 1px solid #4f4f4f;
+    padding-top: 15px;
+}
+.ListTabs {
+    padding: 0 35px 20px;
+    border-left: 1px solid #4f4f4f;
+    border-right: 1px solid #4f4f4f;
+}
+.ListTabs ul li {   
+    display: inline-block;
+    margin: 0 7px;
+    line-height: 18px;
+}
+.ListTabs ul li .row-line {
+    background: #ddd;
+    width: 1px;
+    height: 9px;
+    margin: -3px 0 0 10px;
+}
+
 
 /* subContainer : Prof : 공지사항 */
 .oBox {
@@ -4949,7 +4983,7 @@ ul li.profList .willbes-Layer-ProfileBox {
 }
 .csCenterTable tr th ul li {
     display: inline-block;
-    margin: 0 30px;
+    margin: 0 45px;
     line-height: 50px;
 }
 .csCenterTable .replyList .arrow-Btn {
