모바일웹 > 학원강좌 > 수강신청, 공지사항, 자주하는질문 작업 페이지 업로드

--- a/public/css/willbes/basic.css
+++ b/public/css/willbes/basic.css
@@ -646,6 +646,9 @@ strong {
 .pb10 {
   padding-bottom: 10px !important;
 }
+.pb20 {
+  padding-bottom: 20px !important;
+}
 .pb40 {
   padding-bottom: 40px !important;
 }
