--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -4875,7 +4875,15 @@ ul li.profList .willbes-Layer-ProfileBox {
     left: 50%;
     margin-left: -45px;
 }
-
+.search-Btn div a {
+    display: block;
+    width: 100%;
+    height: 100%;
+    font-size: 14px;
+    font-weight: 300;
+    color: #fff;
+    text-align: center;
+}
 
 
 /*********************************************     CSCENTER PAGE     *********************************************/
