--- a/public/css/willbes/m/style.css
+++ b/public/css/willbes/m/style.css
@@ -139,7 +139,7 @@ input {
     padding-left: 20px;
 }
 #aside .List {
-    font-size: 20px;
+    font-size: 16px;
     color: #000;
     line-height: 60px;
     padding-left: 20px;
@@ -147,7 +147,7 @@ input {
 }
 #aside .Depth,
 #aside .List-Depth {
-    font-size: 18px;
+    font-size: 14px;
     color: #4d4d4d;
     line-height: 30px;
     padding: 15px 0 15px 20px;
@@ -159,7 +159,7 @@ input {
 
 /* Header : 공통 */
 #Header .Menu-List {
-    height: 76px;
+    height: 52px;
     border-bottom: 1px solid #ccc;
 }
 #Header button.menubar {
@@ -190,7 +190,7 @@ input {
     margin-left: -67px;
 }
 #Header .Login-List {
-    height: 62px;
+    height: 42px;
 }
 #header .myLog {
     float: right;
@@ -198,10 +198,10 @@ input {
 }
 #header .myLog li {
     float: left;
-    line-height: 62px;
+    line-height: 42px;
 }
 #header .myLog li a {
-    font-size: 18px;
+    font-size: 14px;
 }
 #header .myLog .row-line {
     background: #b7b7b7;
@@ -302,7 +302,7 @@ input {
     width: 100%;
     height: 47px;
     line-height: 46px;
-    font-size: 18px;
+    font-size: 14px;
     font-weight: 600;
     color: #000;
     text-align: center;
@@ -361,7 +361,7 @@ input {
     width: 100%;
     height: 42px;
     line-height: 40px;
-    font-size: 18px;
+    font-size: 14px;
     color: #000;
     text-align: center;
     letter-spacing: 0;
@@ -409,7 +409,7 @@ input {
     margin-left: 15px;
 }
 .lecProfBox ul li .w-tit {
-    font-size: 20px;
+    font-size: 16px;
     color: #000;
     line-height: 24px;
     padding: 10px 0;
@@ -477,12 +477,12 @@ input {
 /*********************************************     CONTAINER PAGE     *********************************************/
 /* Tit : 공통 */
 .willbes-Tit {
-    font-size: 20px;
+    font-size: 16px;
     color: #323232;
     text-align: center;
-    line-height: 68px;
+    line-height: 48px;
     background: #ececec;
-    height: 70px;
+    height: 50px;
     border-top: 1px solid #ccc;
     border-bottom: 1px solid #ccc;
 }
@@ -497,7 +497,7 @@ input {
     margin-top: -23px;
 }
 .willbes-List-Tit {
-    font-size: 20px;
+    font-size: 16px;
     color: #323232;
     padding: 15px 20px;
 
@@ -517,7 +517,7 @@ input {
     vertical-align: baseline;
 }
 .willbes-Txt-Tit {
-    font-size: 18px;
+    font-size: 14px;
     color: #3a3a3a;
     line-height: 50px;
 }
@@ -534,7 +534,7 @@ input {
     font-size: 14px;
 }
 .willbes-Line {
-    font-size: 20px;
+    font-size: 16px;
     color: #fff;
     text-align: left;
     line-height: 68px;
@@ -549,7 +549,7 @@ input {
 }
 .willbes-Lec-Selected select {
     float: left;
-    font-size: 18px;
+    font-size: 14px;
     height: 60px;
 }
 
@@ -615,14 +615,14 @@ input {
 
 /* lecTable : 공통 */
 .lecTable .w-tit {
-    font-size: 20px;
+    font-size: 16px;
     color: #323232;
     line-height: 24px;
     padding: 10px 0;
 }
 .lecTable .w-info {
     font-family: "NanumGothic-Regular", "Nanum Gothic", "나눔고딕", "sans-serif";
-    font-size: 16px;
+    font-size: 14px;
     line-height: 20px;
 }
 .lecTable .w-info span {
@@ -641,7 +641,7 @@ input {
     line-height: 30px;
 }
 .lecTable .w-file {
-    font-size: 18px;
+    font-size: 14px;
     line-height: 40px;
 }
 .lecTable .w-file a {
@@ -651,7 +651,7 @@ input {
     padding-right: 5px;
 }
 .lecTable .w-txt {
-    font-size: 18px;
+    font-size: 14px;
     line-height: 24px;
 }
 .lecTable .w-start {
@@ -736,7 +736,7 @@ input {
     clear: both;
     background: #f7f7f7;
     height: 70px;
-    font-size: 20px;
+    font-size: 16px;
     color: #999;
     text-align: center;
     line-height: 70px;
@@ -752,33 +752,33 @@ input {
 .AddlecMore {
     clear: both;
     background: #1a8ccc;
-    height: 55px;
+    height: 45px;
     margin: 10px 20px;
 }
 .AddlecMore a {
     display: block;
-    font-size: 20px;
+    font-size: 16px;
     color: #fff;
     text-align: center;
-    line-height: 55px;
+    line-height: 45px;
 }
 .BuylecMore {
     clear: both;
     background: #1a8ccc;
-    height: 55px;
+    height: 45px;
 }
 .BuylecMore a {
     display: block;
-    font-size: 20px;
+    font-size: 16px;
     color: #fff;
     text-align: center;
-    line-height: 55px;
+    line-height: 45px;
 }
 .lecSubject {
     clear: both;
     background: #4f4f4f;
     height: 70px;
-    font-size: 20px;
+    font-size: 16px;
     color: #fff;
     text-align: center;
     line-height: 70px;
@@ -801,7 +801,7 @@ input {
     display: block;
     width: 100%;
     height: 100%;
-    font-size: 20px;
+    font-size: 16px;
     text-align: center;
     line-height: 65px;
 }
@@ -862,7 +862,7 @@ input {
 }
 .passProfTabs .w-info {
     clear: both;
-    padding-top: 20px;
+    padding-top: 5%;
 }
 .passTabs {
     padding: 0 20px;
@@ -894,8 +894,8 @@ input {
     margin-left: 15px;
 }
 .passListTabs tr td {
-    padding-top: 30px;
-    padding-bottom: 30px;
+    padding-top: 3%;
+    padding-bottom: 3%;
 }
 .passListTabs tr td:first-child {
     padding-left: 0;
@@ -910,7 +910,7 @@ input {
     margin-top: 10px;
 }
 .passListTabs tr td .w-tit {
-    font-size: 18px;    
+    font-size: 14px;    
 }
 .passListTabs tr td .w-info {
     font-size: 14px;
@@ -947,7 +947,7 @@ input {
 /* 무한 PASS 강좌추가 */
 .willbes-Lec-Search {
     float: left;
-    font-size: 18px;
+    font-size: 14px;
 }
 .willbes-Lec-Search .inputBox {
     float: left;
@@ -967,7 +967,7 @@ input {
 .willbes-Lec-Search .reset-Btn {
     background: #4f4f4f;
     height: 60px;
-    font-size: 18px;
+    font-size: 14px;
     color: #fff;
     text-align: center;
     line-height: 60px;
@@ -1045,7 +1045,7 @@ input {
     display: block;
     width: 100%;
     height: 100%;
-    font-size: 18px;
+    font-size: 14px;
     color: #9a9a9a;
 }
 .willbes-Open-Table .MoreBtn a img {
@@ -1057,7 +1057,7 @@ input {
     padding: 20px 0 !important;
 }
 .daysListTabs table tr td.w-num {
-    font-size: 18px;
+    font-size: 14px;
     text-align: center;
 }
 .daysListTabs table tr td .w-info {
