--- a/public/css/willbes/m/style.css
+++ b/public/css/willbes/m/style.css
@@ -664,7 +664,6 @@ input {
 }
 .lecTable .w-subtxt {
     width: 50%;
-
 } 
 .lecTable .w-start {
     font-size: 12px;
@@ -710,7 +709,7 @@ input {
     padding-left: 20px;
 }
 .lecTable .w-s-date input[type="text"] {
-    width: 20%; 
+    width: 15%; 
     height: 30px;
 }
 .lecTable .w-line {
@@ -749,6 +748,7 @@ input {
     vertical-align: baseline;
 }
 .btnBox {
+    clear: both;
     float: left;
     margin: 0 20px;
 }
@@ -883,27 +883,24 @@ input {
 }
 .passProfTabs .w-info {
     clear: both;
-    padding-top: 5%;
+    padding-top: 10px;
 }
 .passTabs {
     padding: 0 20px;
 }
 
 /* 무한 PASS존 자세히 보기 : Tabs : buylecTable */
-.buylecTable tr td {
-    padding: 4% 0 3%;
-}
 .buylecTable tr td.w-chk {
     vertical-align: top;
 }
 .buylecTable tr td.w-chk input[type="checkbox"] {
-    margin-top: 10px;
+    margin-top: 5px;
 }
 
 /* 무한 PASS존 자세히 보기 : Tabs : passListTabs */
 .passListTabs thead tr td {
-    padding-top: 4%;
-    padding-bottom: 2%;  
+    padding-top: 20px;
+    padding-bottom: 10px;  
 }
 .passListTabs thead tr td.w-chk input[type="checkbox"] {
     float: left;
@@ -913,10 +910,6 @@ input {
     font-size: 16px;
     line-height: 24px;
     margin-left: 15px;
-}
-.passListTabs tr td {
-    padding-top: 5%;
-    padding-bottom: 5%;
 }
 .passListTabs tr td:first-child {
     padding-left: 0;
@@ -1044,9 +1037,6 @@ input {
     background: #1a8ccc;
     color: #fff;
 }
-.tabletTabs table tr td {
-    padding: 3% 20px;
-}
 .tabletTabs table tr td .w-info {
     line-height: 30px;
 }
@@ -1080,6 +1070,7 @@ input {
 .daysListTabs table tr td.w-num {
     font-size: 14px;
     text-align: center;
+    padding-left: 0;
 }
 .daysListTabs table tr td .w-info {
     line-height: 30px;
