학원방문접수 > 디자인, 코딩검수 작업 업로드

--- a/public/css/willbes/basic.css
+++ b/public/css/willbes/basic.css
@@ -384,6 +384,10 @@ strong {
   width: 770px;
   margin: 0 auto;
 }
+.widthAuto810 {
+  width: 810px !important;
+  margin: 0 auto;
+}
 .widthAuto820 {
   width: 820px !important;
   margin: 0 auto;
@@ -658,6 +662,9 @@ strong {
 }
 .pb60 {
   padding-bottom: 60px !important;
+}
+.pb85 {
+  padding-bottom: 85px !important;
 }
 .pb110 {
   padding-bottom: 110px !important;
