모바일웹 이미지 변경2

--- a/public/css/willbes/m/style.css
+++ b/public/css/willbes/m/style.css
@@ -108,6 +108,9 @@ lh30 {
 input {
     border: 1px solid #d4d4d4;
 }
+button {
+    padding: 0;
+}
 
 /* Aside */
 #aside {
@@ -169,7 +172,7 @@ input {
 
 /* Header : 공통 */
 #Header .Menu-List {
-    height: 52px;
+    height: 62px;
     border-bottom: 1px solid #ccc;
 }
 #Header button.menubar {
@@ -192,15 +195,25 @@ input {
     right: 10px;
     margin-top: -23px;
 }
+#Header button.myacad {
+    background: url("../../../img/willbes/m/main/icon_myacad.png") no-repeat 0 0;
+    width: 46px;
+    height: 46px;
+    border: none;
+    position: absolute;
+    top: 50%;
+    left: 10px;
+    margin-top: -23px;
+}
 #header .logo {
     position: absolute;
     top: 50%;
     left: 50%;
-    margin-top: -11px;
-    margin-left: -32px;
+    margin-top: -21px;
+    margin-left: -60px;
 }
 #Header .Login-List {
-    height: 42px;
+    height: 52px;
 }
 #header .myLog {
     float: right;
@@ -435,7 +448,7 @@ input {
 
 /* Main : Tabs : noticeBox */
 .noticeBox .List-Table li {
-    font-size: 15px;
+    font-size: 14px;
     line-height: 40px;
     height: 42px;
     border-top: 1px solid #e4e4e4;
@@ -467,7 +480,7 @@ input {
 
 /* Footer */
 #Footer .ft-Link {
-    font-size: 14px;
+    font-size: 12px;
     color: #666;
     text-align: center;
     padding: 40px 0;
@@ -477,7 +490,7 @@ input {
     margin: 0 5px;
 }
 #Footer address {
-    font-size: 12px;
+    font-size: 11px;
     color: #707070;
     text-align: center;
 }
@@ -1030,8 +1043,8 @@ input {
 }
 .willbes-Lec-Search button.search-Btn {
     background: url("../../../img/willbes/m/main/icon_search_btn.png") no-repeat 0 0;
-    width: 45px;
-    height: 45px;
+    width: 51px;
+    height: 43px;
     border: none;
     position: absolute;
     top: 1px;
