--- a/public/css/willbes/m/style.css
+++ b/public/css/willbes/m/style.css
@@ -642,12 +642,12 @@ button {
 /* 상태 공통 */
 .w-info dt .nBox {
     display: inline;
-    height: 20px;
     font-size: 12px;
     color: #fff;
     text-align: center;
     line-height: 20px;
-    padding: 1px 6px;
+    padding: 2px 6px 0;
+    vertical-align: middle !important;
 }
 .w-info dt .nBox.n1 {
     background: #f14078;
