학원수강신청 > 디자인, 코딩검수 작업 업로드

--- a/public/css/willbes/basic.css
+++ b/public/css/willbes/basic.css
@@ -467,6 +467,9 @@ strong {
 .mt0 {
   margin-top: 0px !important;
 }
+.mt5 {
+  margin-top: 5px !important;
+}
 .mt10 {
   margin-top: 10px !important;
 }
@@ -883,6 +886,9 @@ strong {
 }
 .underline {
   text-decoration: underline !important;
+}
+.line-through {
+  text-decoration: line-through !important;
 }
 .caution-txt {
   background: url("../../img/willbes/sub/icon_caution.gif") no-repeat 0 center;
